--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
         "vue": "^2.5.17",
         "vue-loader": "^15.9.6",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "vue-axios": "^3.2.4",
+        "vue-router": "^3.5.1"
     }
 }
