--- a/package.json
+++ b/package.json
@@ -10,19 +10,19 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "@vue/compiler-sfc": "^3.0.6",
-        "axios": "^0.21",
+        "axios": "^0.21.1",
         "bootstrap": "^4.0.0",
         "jquery": "^3.2",
-        "laravel-mix": "^6.0.0-beta.17",
+        "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "popper.js": "^1.12",
         "postcss": "^8.1.14",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
-        "vue": "^3.0.6",
-        "vue-loader": "^16.1.2",
+        "vue": "^2.5.17",
+        "vue-loader": "^15.9.6",
         "vue-template-compiler": "^2.6.10"
-    }
+    },
+    "dependencies": {}
 }
