--- a/package.json
+++ b/package.json
@@ -34,9 +34,10 @@
         "jest": "^26.6.3"
     },
     "dependencies": {
+        "cross-fetch": "^3.1.4",
+        "flush-promises": "^1.0.2",
         "vue-axios": "^3.2.4",
-        "vue-router": "^3.5.1",
-        "flush-promises": "^1.0.2"
+        "vue-router": "^3.5.1"
     },
     "babel": {
         "presets": [
