--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@smartweb/vue-flash-message": "^0.6.10",
         "flush-promises": "^1.0.2",
         "moment": "^2.29.1",
+        "@jest/globals": "^26.6.2",
         "vue-axios": "^3.2.4",
         "vue-router": "^3.5.1"
     },
